environment/appNode.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodeapp

---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: nodeapp
  labels: { app: nodeapp }
spec:
  type: ClusterIP
  selector: { app: nodeapp }
  ports:
    - name: http
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  namespace: nodeapp
  labels: { app: nodeapp }
spec:
  replicas: 2
  selector:
    matchLabels: { app: nodeapp }
  template:
    metadata:
      labels: { app: nodeapp }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
      containers:
        - name: app-node
          image: 725510651649.dkr.ecr.us-east-1.amazonaws.com/appnode/eks-pipeline:latest # substituir via CI harness
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits:   { cpu: "250m", memory: "256Mi" }
