environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: appnode
  labels: { app: appnode }
spec:
  type: ClusterIP
  selector: { app: appnode }
  ports:
    - name: http
      port: 80
      targetPort: 3000
